# gext

./: .gitignore  Cargo.toml  LICENSE  README.md  default.map.json  gext.save.json  savegame.json
.github/workflows/: mdbook.yml
doc/: book.toml
doc/src/: SUMMARY.md  intro-java-dev.md  modding.md  usage.md
doc/src/modding/: map.md  player_data.md
doc/src/usage/: installation.md  options.md  playing.md
savegames/: bob's full run.json
src/: impls.rs  main.rs  structs.rs
