[package]
name = "gext"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A text-based adventure game"
homepage = "https://github.com/werdl/gext"
repository = "https://github.com/werdl/gext"
readme = "README.md"
documentation = "https://werdl.github.io/gext/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
